--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "scroll-indicator": "^1.0.0",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
