--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-slick": "^0.29.0",
     "scroll-indicator": "^1.0.0",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
